Provider side fixes
